--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href='http://fonts.googleapis.com/css?family=Abril+Fatface|Anonymous+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  
 </head>
 <body>
-  
+  <header>
+    <h1>Where the Wifi at?</h1>
+    <input type="text" name="Enter Location" placeholder="Enter Location">
+    <div>
+      <button>Search</button>
+      <button>Get Location</button>
+    </div>
+  </header>
 </body>
 </html>
