--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Where the WiFi at?</title>
   <link rel="stylesheet" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Abril+Fatface|Anonymous+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   
