--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <title>Where the WiFi at?</title>
   <link rel="stylesheet" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Abril+Fatface|Anonymous+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   
 </head>
 <body>
   <header>
     <h1>Where the Wifi at?</h1>
+    <i class="fa fa-wifi"></i>
     <input type="text" name="Enter Location" placeholder="Enter Location">
     <div>
-      <button>Search</button>
-      <button>Get Location</button>
+      <button class="search">Search</button>
+      <button class="getLocation">Get Location</button>
     </div>
   </header>
 </body>
