Adding Google map

--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
       <button class="getLocation">Get Location</button>
     </div>
   </header>
+
+  <section>
+   <div id="map-canvas"></div>
+   <div id="location-names">
+      <p>Map location 1</p>
+      <p>Map location 2</p>
+   </div>
+  </section>
 </body>
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBzO48uDw9fIb7z1Igyb7WjShZzCyTDxK4"></script>
+<script src="js/map.js"></script>
 </html>
