--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Abril+Fatface|Anonymous+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/png" href="images/icon.png">
   
 </head>
 <body>
@@ -18,13 +19,13 @@
       <button class="getLocation">Get Location</button>
     </div>
   </header>
-
+  
   <section>
-   <div id="map-canvas"></div>
-   <div id="location-names">
+    <div id="map-canvas"></div>
+    <div id="location-names">
       <p>Map location 1</p>
       <p>Map location 2</p>
-   </div>
+    </div>
   </section>
 </body>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBzO48uDw9fIb7z1Igyb7WjShZzCyTDxK4"></script>
