--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Where the WiFi at?</title>
-  <link rel="stylesheet" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Abril+Fatface|Anonymous+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="icon" type="image/png" href="images/icon.png">
+  <link rel="stylesheet" href="css/style.css">
   
 </head>
 <body>
@@ -30,5 +30,5 @@
 </body>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBzO48uDw9fIb7z1Igyb7WjShZzCyTDxK4"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="js/map.js"></script>
+<script src="js/script.js"></script>
 </html>
