Fixed js, can either search or use geo-location now

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input id="enter-location" type="text" name="Enter Location" placeholder="Enter Location">
     <div>
       <a href="#map-canvas"><button id="search" class="search" onclick="searchArea()">Search</button></a>
-      <button class="getLocation">Get Location</button>
+      <a href="#map-canvas"><button class="getLocation">Get Location</button></a>
     </div>
   </header>
   
